crates/toml/tests/snapshots/invalid/ext/float/trailing-exp-minus.stderr
TOML parse error at line 1, column 10
  |
1 | a = 0.0e-
  |          ^
invalid exponent, expected digits
